# Visical

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
config/Calibration/: board_sequence_plugins.json  calibration_params.json  calibration_settings.json  single_board_plugins.json
config/CameraAssistant/: camera_assistant_settings.json  camera_list.json  camera_list_W.json
config/Detection/: board_sequence_plugins.json  detection_params.json  detection_settings.json  single_board_plugins.json
config/Setup/: setup_params.json  setup_settings.json
docs/source/: arch.drawio  arch.tex
platform/windows/: Resource.rc  resource.h
src/: CvToWxImageConverter.cpp  CvToWxImageConverter.hpp  UtilityFunctions.hpp  UtilityFunctions.inl
src/app/: AppWorkflow.cpp  AppWorkflow.hpp
src/async_worker/: AsyncWorker.cpp  AsyncWorker.hpp  AsyncWorker.inl
src/calibration/: Board.cpp  Board.hpp  BoardPattern.hpp  CameraIntrinsics.cpp  CameraIntrinsics.hpp  CameraIntrinsicsRegistry.cpp  CameraIntrinsicsRegistry.hpp  DistortionModel.cpp  DistortionModel.hpp  DistortionModelRegistry.cpp  DistortionModelRegistry.hpp
src/calibration/calibrator/: CalibratedBoard.cpp  CalibratedBoard.hpp  CalibrationParameters.hpp  CalibrationParametersRegistry.cpp  CalibrationParametersRegistry.hpp  Calibrator.cpp  Calibrator.hpp  CameraModel.cpp  CameraModel.hpp
src/calibration/detector/: AprilTagParameters.cpp  AprilTagParameters.hpp  AprilTagParametersRegistry.cpp  AprilTagParametersRegistry.hpp  ArucoParameters.cpp  ArucoParameters.hpp  ArucoParametersRegistry.cpp  ArucoParametersRegistry.hpp  CharucoParameters.cpp  CharucoParameters.hpp  CharucoParametersRegistry.cpp  CharucoParametersRegistry.hpp  ChessboardParameters.cpp  ChessboardParameters.hpp  ChessboardParametersRegistry.cpp  ChessboardParametersRegistry.hpp  ChessboardParams.cpp  ChessboardParams.hpp  ChessboardParamsRegistry.cpp  ChessboardParamsRegistry.hpp  CircleboardParameters.cpp  CircleboardParameters.hpp  CircleboardParametersRegistry.cpp  CircleboardParametersRegistry.hpp  CircleboardParams.cpp  CircleboardParams.hpp  CircleboardParamsRegistry.cpp  CircleboardParamsRegistry.hpp  Detector.cpp  Detector.hpp  PatternParameters.cpp  PatternParameters.hpp  PatternParametersRegistry.cpp  PatternParametersRegistry.hpp  PatternParams.cpp  PatternParams.hpp  PatternParamsRegistry.cpp  PatternParamsRegistry.hpp
src/camera/: CameraState.hpp  CameraStateMachine.cpp  CameraStateMachine.hpp  CameraUtils.cpp  CameraUtils.hpp  ICamera.cpp  ICamera.hpp  ICamera.inl  ICameraDefs.hpp  ICameraInfo.hpp  ICameraMessages.hpp
src/camera_manager/: CameraManager.cpp  CameraManager.hpp  CameraManagerMessages.hpp  ICameraProxy.cpp  ICameraProxy.hpp  ICameraProxy.inl
src/cv/: CvContour.cpp  CvContour.hpp  CvImage.cpp  CvImage.hpp  CvPainter.cpp  CvPainter.hpp  CvRegion.cpp  CvRegion.hpp
src/enum/: EnumTraits.hpp
src/evaluator/: EvaluationDefs.hpp  EvaluationResult.hpp  EvaluationResult.inl  Evaluator.hpp  Evaluator.inl  IEvaluator.cpp  IEvaluator.hpp  IPlugin.cpp  IPlugin.hpp  ParameterToPluginTranslator.hpp  Plugin.hpp  Plugin.inl  PluginBase.hpp  PluginBase.inl  PluginContext.cpp  PluginContext.hpp  PluginContextInfo.cpp  PluginContextInfo.hpp  PluginDebugResult.hpp  PluginInfo.hpp  PluginResult.cpp  PluginResult.hpp
src/gui_elements/base_widget/: BaseWidget.cpp  BaseWidget.hpp  BaseWidgetList.cpp  BaseWidgetList.hpp
src/gui_elements/busy_overlay/: BusyOverlay.cpp  BusyOverlay.hpp
src/gui_elements/image_panel/: ImagePanel.cpp  ImagePanel.hpp  PixelEvent.cpp  PixelEvent.hpp
src/gui_elements/logger/: LoggerView.cpp  LoggerView.hpp
src/gui_elements/parameter/: BoolParameterWidget.cpp  BoolParameterWidget.hpp  CommandParameterWidget.cpp  CommandParameterWidget.hpp  EnumParameterWidget.cpp  EnumParameterWidget.hpp  NumericParameterWidget.hpp  NumericParameterWidget.inl  ParameterChangedEvent.hpp  ParameterEvent.hpp  ParameterWidget.cpp  ParameterWidget.hpp  ParameterWidgetEvents.cpp  ParameterWidgetEvents.hpp  ParameterWidgetList.cpp  ParameterWidgetList.hpp  StringParameterWidget.cpp  StringParameterWidget.hpp
src/gui_elements/persistent_tooltip/: PersistentToolTip.cpp  PersistentToolTip.hpp
src/logger/: Log.cpp  Log.hpp  Logger.cpp  Logger.hpp
src/message_bus/: MessageBus.hpp  MessageBus.inl  MessageDispatcher.cpp  MessageDispatcher.hpp  MessageDispatcher.inl  MessageDispatcherProxy.cpp  MessageDispatcherProxy.hpp  MessageDispatcherProxy.inl  MessageHandler.hpp  MessageHandler.inl  MessageSubscription.hpp  MessageSubscription.inl  MessageTag.cpp  MessageTag.hpp  SourceId.hpp
src/message_bus/types/: Message.cpp  Message.hpp  MessageContext.cpp  MessageContext.hpp  MessageContext.inl  MessageP.hpp  MessageP.inl  MessageTask.cpp  MessageTask.hpp  MessageTaskP.hpp  MessageTaskP.inl
src/message_logger/: MessageLogger.cpp  MessageLogger.hpp
src/mvc/model/: BaseModel.cpp  (+1 more)
src/object_registry/: BidirectionalObjectRegistry.hpp  BidirectionalObjectRegistry.inl  ObjectRegistry.hpp  ObjectRegistry.inl
src/parameter/: Parameter.cpp  Parameter.hpp  Parameter.inl  ParameterDefs.hpp  ParameterInfo.hpp  ParameterInfo.inl  ParameterInfoMap.cpp  ParameterInfoMap.hpp  ParameterMap.cpp  ParameterMap.hpp  ParameterOwner.cpp  ParameterOwner.hpp  ParameterOwnerInfo.hpp  ParameterRegistry.cpp  ParameterRegistry.hpp  ParameterUtils.cpp  ParameterUtils.hpp
src/task_result/: TaskResult.cpp  TaskResult.hpp  TaskResult.inl
src/thread/: Thread.cpp  Thread.hpp  Thread.inl
src/utility/: MoveOnlyFunction.hpp
(+261 files in other folders)
